--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -1,13 +1,12 @@
 header {
     display:flex;
     flex-direction: row;
-    /* justify-content: space-evenly;  */
+    justify-content: space-between; 
     align-items: flex-end;
     padding-top: 2%;
     padding-bottom: 2%;
     padding-left: 4%;
     padding-right: 4%;
-    /* background-color: blue; */
 }
 
 .logoutContainer {
