--- a/client/src/components/Home/home.css
+++ b/client/src/components/Home/home.css
@@ -7,7 +7,7 @@
 
 .logoImg {
     max-width: 5%;
-    margin-right: 30%;
+    /* margin-right: 30%; */
 }
 /* ------------------------- LOGIN ------------------------- */
 
