--- a/client/src/components/Nav/nav.css
+++ b/client/src/components/Nav/nav.css
@@ -1,8 +1,8 @@
 nav {
  display: flex;
  flex-direction: row;
- background-color: orange;
- width: 100%;
+ width: 25vw;
+justify-content: space-between;
 }
 
 
@@ -18,11 +18,10 @@ nav {
 
 
 .logoutButton {
-  background-color: yellow;
+  background-color: transparent;
   color: #808080;
   font-size: 1.2em;
   font-weight: 300;
-  background-color: transparent;
   border: none;
   cursor: pointer;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
