--- a/client/src/components/SearchPeople/searchPeople.css
+++ b/client/src/components/SearchPeople/searchPeople.css
@@ -72,7 +72,6 @@
   border: 1.5px solid #dad9d9;
   border-radius: 24px;
   padding: .38em 2em;
-  margin-right: .2%;
   font-size: 1em;
   cursor: pointer;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
